[gd_scene load_steps=5 format=3 uid="uid://k1wcjo523nlk"]

[ext_resource type="Script" uid="uid://cpg0e38dugm4h" path="res://Scripts/manotazo.gd" id="1_cowbk"]
[ext_resource type="PackedScene" uid="uid://cqk041nvlxycc" path="res://Escenas/tablero.tscn" id="1_vlixu"]
[ext_resource type="Texture2D" uid="uid://e6uxrm3lxrne" path="res://imagenes/botones/button_9slice.png" id="3_d5nel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta20j"]
bg_color = Color(0.49747366, 0.49747372, 0.49747354, 0.68235296)

[node name="Manotazo" type="Node2D"]
script = ExtResource("1_cowbk")

[node name="Tablero" parent="." instance=ExtResource("1_vlixu")]
offset_left = 143.99998
offset_top = 70.99999
offset_right = 143.99998
offset_bottom = 70.99999
scale = Vector2(0.7, 0.7)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 17.924002
anchor_bottom = 20.453001
offset_bottom = -6.1035156e-05
grow_horizontal = 2
grow_vertical = 2

[node name="PanelGameOver" type="Panel" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ta20j")

[node name="TitleGameOverPanel" type="Panel" parent="Control/CenterContainer/PanelGameOver"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.141
offset_bottom = -0.20999908
grow_horizontal = 2

[node name="lblGameOver" type="Label" parent="Control/CenterContainer/PanelGameOver/TitleGameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.30005085, 0.23680493, 1)
theme_override_font_sizes/font_size = 56
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelScore" type="Panel" parent="Control/CenterContainer/PanelGameOver"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer/PanelGameOver/PanelScore"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="lblRecord" type="Label" parent="Control/CenterContainer/PanelGameOver/PanelScore/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
theme_override_font_sizes/font_size = 42
text = "Record:"
horizontal_alignment = 2

[node name="txtRecord" type="Label" parent="Control/CenterContainer/PanelGameOver/PanelScore/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="lblScore" type="Label" parent="Control/CenterContainer/PanelGameOver/PanelScore/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
theme_override_font_sizes/font_size = 42
text = "Score:"
horizontal_alignment = 2

[node name="txtScore" type="Label" parent="Control/CenterContainer/PanelGameOver/PanelScore/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="btnReiniciar" type="Button" parent="Control/CenterContainer/PanelGameOver"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -264.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_icons/icon = ExtResource("3_d5nel")
text = "Reiniciar"
flat = true
icon_alignment = 1

[connection signal="gameover" from="Tablero" to="." method="_on_tablero_gameover"]
[connection signal="pressed" from="Control/CenterContainer/PanelGameOver/btnReiniciar" to="." method="_on_btn_reiniciar_pressed"]
